@@ -274,3 +274,4 @@ Alex Griffin
 Marc Remy
 Matej Vela
 Jason Ellison
+Charles-Henri Larose
